--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /*
         ==================================================
-        CSS (STYLE AMÉLIORÉ)
+        CSS (STYLE AMÉLIORÉ avec LOGO)
         ==================================================
         */
         :root {
@@ -38,6 +38,15 @@
             max-width: 700px;
             width: 100%;
             border-top: 5px solid var(--mcdo-red); /* Bordure rouge McDo */
+            
+            /* --- AJOUT DU LOGO EN FOND --- */
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_logo.svg/200px-McDonald%27s_logo.svg.png'); /* URL d'un logo public */
+            background-repeat: no-repeat;
+            background-position: bottom 20px right 20px; /* Position en bas à droite */
+            background-size: 80px; /* Taille du logo */
+            background-attachment: local; /* Défile avec le contenu si la page est longue */
+            opacity: 0.95; /* Légère opacité pour que le logo ne gêne pas la lecture */
+            /* ----------------------------- */
         }
 
         header {
@@ -120,7 +129,6 @@
         input[type="range"] {
             width: 100%;
             margin-top: 15px;
-            /* Ajout de styles pour une meilleure visibilité du curseur */
         }
 
         .range-labels {
